# HahaORM

./: .gitignore  BaseRepository.h  CMakeLists.txt  CompanyRepository.h  DBConnector.h  README.md  main.cpp
ProtoTableTransfer/: table2proto.cpp
entity/: CMakeLists.txt  company.pb.cc  company.pb.h  company_stock_price.pb.cc  company_stock_price.pb.h  employee.pb.cc  employee.pb.h
protobufs/: company.proto  company_stock_price.proto  employee.proto
